sass/atoms/_call-to-action.sass
////
/// Call to action button
////
$stencila-call-to-action-font-size: 16 !default
$stencila-call-to-action-padding: rem(20) rem(40) !default
$stencila-call-to-action-padding-large: rem(20) rem(80) !default

.call-to-action
    &-with-text
        margin-top: rem(40)
        margin-bottom: rem(40)

        +mobile
            text-align: center

        .call-to-action-text
            color: $grey
            font-size: rem(14)
            line-height: em(18, 14)

        .button
            + .call-to-action-text
                margin-top: rem(40)

    &.button
        font-size: rem($stencila-call-to-action-font-size)
        font-weight: $weight-semibold
        line-height: 1em
        text-transform: uppercase
        padding: $stencila-call-to-action-padding
        margin-left: auto
        margin-right: auto

        &.is-large
            padding: $stencila-call-to-action-padding-large

        /// override the default bulma darken on hover of primary
        &.is-primary
            &:hover
                background-color: $navy-blue

            &.is-outlined
                &:hover
                    border-color: $navy-blue
                    color: $navy-blue
                    background: transparent

.buttons
    .call-to-action
        &.button
            margin-right: rem(10)
            margin-left: 0

